working-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: proxitok:gateway.networking.k8s.io/HTTPRoute:proxitok/proxitok-route
  creationTimestamp: "2025-11-21T20:02:09Z"
  generation: 1
  labels:
    argocd.argoproj.io/instance: proxitok
  name: proxitok-route
  namespace: proxitok
  resourceVersion: "37785"
  uid: 4acbbfe7-b34d-4b85-8c74-3b653a4718c5
spec:
  hostnames:
  - proxitok.homelabjunkie.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-external
    namespace: gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: proxitok-web
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-11-21T20:02:11Z"
      message: Accepted HTTPRoute
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-11-21T20:02:11Z"
      message: Service reference is valid
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
